--- a/Develop/index.html
+++ b/Develop/index.html
@@ -88,8 +88,8 @@
                   <label for="taskDesc">Task Description</label>
                   <textarea
                     class="form-control"
-                    id="taskDesc"
-                    name="taskDesc"
+                    id="taskDescription"
+                    name="taskDescription"
                   ></textarea>
                 </div>
                 <div class="form-group mt-3 text-center">
