--- a/Develop/index.html
+++ b/Develop/index.html
@@ -46,123 +46,61 @@
       <div
         class="modal fade"
         id="formModal"
+        data-bs-backdrop="static"
+        data-bs-keyboard="false"
         tabindex="-1"
-        role="dialog"
-        aria-labelledby="exampleModalLabel"
+        aria-labelledby="staticBackdropLabel"
         aria-hidden="true"
       >
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">Add Task</h5>
+              <h1 class="modal-title fs-5" id="staticBackdropLabel">
+                Modal title
+              </h1>
               <button
                 type="button"
-                class="close"
+                class="btn-close"
                 data-bs-dismiss="modal"
                 aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
+              ></button>
             </div>
             <div class="modal-body">
-              <form id="inputForm">
-                <div class="form-group">
-                  <label for="taskTitle">Task Title</label>
+              <form id="inputForm" class="row">
+                <div class="col-md-6">
+                  <label class="form-label">Task:</label>
                   <input
+                    name="title"
                     type="text"
                     class="form-control"
                     id="taskTitle"
-                    name="taskTitle"
                   />
                 </div>
-                <div class="form-group">
-                  <label for="dueDate">Due Date</label>
+                <div class="col-md-6">
+                  <label class="form-label">Date:</label>
                   <input
-                    type="text"
+                    name="date"
+                    type="date"
                     class="form-control"
                     id="dueDate"
-                    name="dueDate"
                   />
                 </div>
-                <div class="form-group">
-                  <label for="taskDesc">Task Description</label>
-                  <textarea
+                <div class="col-12">
+                  <label class="form-label">Task Description:</label>
+                  <input
+                    name="description"
+                    type="textarea"
                     class="form-control"
                     id="taskDescription"
-                    name="taskDescription"
-                  ></textarea>
+                    placeholder="Briefly describe task here"
+                  />
                 </div>
-                <div class="form-group mt-3 text-center">
-                  <button
-                    type="submit"
-                    class="btn btn-primary"
-                    data-bs-dismiss="modal"
-                  >
+                <div class="modal-footer">
+                  <button type="submit" class="btn btn-secondary">
                     Submit
                   </button>
                 </div>
               </form>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-bs-dismiss="modal"
-              >
-                Close
-              </button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div
-        class="modal fade"
-        id="exampleModal"
-        tabindex="-1"
-        role="dialog"
-        aria-labelledby="exampleModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-              <button
-                type="button"
-                class="close"
-                data-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <form>
-                <div class="form-group">
-                  <label for="recipient-name" class="col-form-label"
-                    >Recipient:</label
-                  >
-                  <input type="text" class="form-control" id="recipient-name" />
-                </div>
-                <div class="form-group">
-                  <label for="message-text" class="col-form-label"
-                    >Message:</label
-                  >
-                  <textarea class="form-control" id="message-text"></textarea>
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
-                class="btn btn-secondary"
-                data-dismiss="modal"
-              >
-                Close
-              </button>
-              <button type="button" class="btn btn-primary">
-                Send message
-              </button>
             </div>
           </div>
         </div>
